Minor problems fix

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .wrapper {
-    width: 600px;
+    width: 80vw;
     background-color: rgb(255, 255, 255);
     box-shadow: 0 0 10px #000;
 
