--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-content: center;
     max-height: 100vh;
     font-family: 'Montserrat', sans-serif;
     background-color: rgb(233, 233, 233);
@@ -89,3 +89,5 @@ select {
     color: firebrick;
     text-align: center;
 }
+
+@media only screen and (max-width: 600px) {}
